--- a/index.html
+++ b/index.html
@@ -255,22 +255,11 @@
       background-color: #f8f9fa;
     }
 
-    #btn-up { grid-column: 2; grid-row: 1; background-color: var(--primary-color); color: white; box-shadow: 0 4px 0 #0056b3, 0 4px 8px rgba(0,122,255,0.3); }
+    /* 统一所有按钮样式，移除 btn-up 的特殊颜色 */
+    #btn-up { grid-column: 2; grid-row: 1; }
     #btn-left { grid-column: 1; grid-row: 2; }
     #btn-down { grid-column: 2; grid-row: 2; }
     #btn-right { grid-column: 3; grid-row: 2; }
-
-    #btn-up:active { background-color: #0069d9; box-shadow: inset 0 2px 4px rgba(0,0,0,0.2); }
-
-    /* —— 底部文字 —— */
-    .footer-info {
-      font-size: 12px;
-      color: #adb5bd;
-      margin-top: 15px;
-      text-align: center;
-      width: 100%;
-      font-weight: 400;
-    }
 
     /* —— 自定义地图模态框 —— */
     #custom-map-modal {
@@ -383,7 +372,7 @@ _#####`,
 #----#
 #-$@.#
 #-#$.#
-"#-$-.#
+#-$-.#
 ######`,
   // 关卡 4
   `__#####_
@@ -412,33 +401,33 @@ ____#######________`,
 #..--#-----###
 #..--#-$--$--#
 #..--#$####--#
-"#..----@-##--#
-"#..--#-#--$-##
-"######-##$-$-#
+#..----@-##--#
+#..--#-#--$-##
+######-##$-$-#
 __#-$--$-$-$-#
 __#----#-----#
 __############`,
   // 关卡 7
   `#####__
 #---#__
-"#---###
-"#$$$@-#
-"#...--#
+#---###
+#$$$@-#
+#...--#
 #######`,
   // 关卡 8
   `####__
 #--#__
-"#--#__
-"#--###
-"#. $$@#
-"#--.-#
-"#--###
+#--#__
+#--###
+#.$$@#
+#--.-#
+#--###
 ####__`,
   // 关卡 9
   `#######
 #-----#
-"#-$$$.#
-"##-#@.#
+#-$$$.#
+##-#@.#
 _#-#-.#
 _#--#-#
 _##---#
@@ -447,34 +436,34 @@ __#####`,
   `_________#####
 _________#---#
 ##########-#-#
-"#.-----#--$--#
-"#. --@--#----##
-"#.#-#######--#
-"#---------$$-#
-"##--#####----#
+#.-----#--$--#
+#.--@--#----##
+#.#-#######--#
+#---------$$-#
+##--#####----#
 _####___######`,
   // 关卡 11
   `_#######__
 _#-----###
-"##-###$--#
-"#--..-$--#
-"#--.##$-##
-"###-#-@##_
+##-###$--#
+#--..-$--#
+#--.##$-##
+###-#-@##_
 __#---##__
 __#####___`,
   // 关卡 12
   `######____
 #----#####
-"#---$-$--#
-"###$...@-#
+#---$-$--#
+###$...@-#
 __#--#####
 __####____`,
   // 关卡 13
   `#######
 #@-$.-#
-"#--$--#
-"#.-$-$#
-"#-.-#.#
+#--$--#
+#.-$-$#
+#-.-#.#
 #######`
 ];
 
